fixed grid again + need to align grid

--- a/src/components/EventsStyle.css
+++ b/src/components/EventsStyle.css
@@ -29,6 +29,7 @@
 .outer-container > .containerEvents {
   width: 45%;
   flex-direction: column;
+  justify-content: center;
 }
 
 .outer-container > .containerCalendar {
